--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td><img src="images\bhavya.jpg"alt=" Little squid profile picture"></td>
+            <td><img src="bhavya.jpg"alt=" Little squid profile picture"></td>
             <td><h1>Little Squid</h1>
                 <p><em>Student at <strong><a href="https://mangaloreuniversity.ac.in/">Mangalore University📚</a></strong></em></p>
                 <p>Iam studying bachelor's of computer application and i ❤️ coding . </p></td>
