--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </tr>
     </table>
     <hr>
-    <h3><a href="C:\Users\bhavy\OneDrive\Desktop\Web development boot camp-2023 by Dr.Angela Yu\html-personal side\hobbies.html">My Hobbies</a></h3>
+    <h3><a href="hobbies.html">My Hobbies</a></h3>
     <h3><a href="contact.html">Contact me</a></h3>
 </body>       
 </html>
